cros: Fix autocomplete interaction with arrow keys

Currently, AppList autocomplete feature handles arrow
key events regardless of whether or not there is
autocomplete text present, causing unwanted
interactions.

Change autocomplete so that it only handles arrow keys
when autocomplete text is present.

Bug: 881039
Change-Id: I7041646e87e5cd4e95d6299017fa2259899f8994
Reviewed-on: https://chromium-review.googlesource.com/1208718
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Commit-Queue: Daniel Zhang <oxyflush@google.com>
Cr-Commit-Position: refs/heads/master@{#589582}
Former-commit-id: 81ac5803ecec7d4b1181a37a1cb83f8c07109d3d